# Logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: console_printer.h  file_printer.h  log.h  log_printer.h
headers/core/: log.h
headers/output/: console_printer.h  file_printer.h
headers/utils/: constants.h  scope_timer.h
sources/: console_printer.cpp  file_printer.cpp  log.cpp  scope_timer.cpp
sources/core/: log.cpp
sources/output/: console_printer.cpp  file_printer.cpp
sources/utils/: scope_timer.cpp
